[gd_scene load_steps=13 format=3 uid="uid://sffymvjqa27r"]

[ext_resource type="Script" uid="uid://bh3bxpswhs048" path="res://scripts/entities/mobile_troop.gd" id="1_i00s2"]
[ext_resource type="Material" uid="uid://b7w588gjmshvi" path="res://materials/ally_outline.tres" id="2_4bdhk"]
[ext_resource type="Texture2D" uid="uid://dq1f4p3bcts8h" path="res://textures/crawl-tiles Oct-5-2010/dc-misc/slot_eq_cursed.png" id="3_yxdfv"]
[ext_resource type="Texture2D" uid="uid://clfln8e51ruhi" path="res://textures/crawl-tiles Oct-5-2010/UNUSED/armour/shield_of_reflection.png" id="4_yxdfv"]
[ext_resource type="LabelSettings" uid="uid://badbvapsffh67" path="res://font_settings/troop_label.tres" id="5_tqbw1"]
[ext_resource type="Texture2D" uid="uid://g1xfsjbyyifb" path="res://textures/crawl-tiles Oct-5-2010/dc-misc/unseen_weapon.png" id="6_56jq0"]
[ext_resource type="Texture2D" uid="uid://snd47pf1fcpy" path="res://textures/crawl-tiles Oct-5-2010/item/armour/boots1_brown.png" id="7_mluuh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqfsp"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_56jq0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yxdfv"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.4, 0.566667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, 0.785398, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger_attack"
}]
}

[sub_resource type="Animation" id="Animation_tqbw1"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mluuh"]
_data = {
&"RESET": SubResource("Animation_56jq0"),
&"attack": SubResource("Animation_yxdfv"),
&"idle": SubResource("Animation_tqbw1")
}

[node name="Monster" type="Area2D"]
z_index = 2
script = ExtResource("1_i00s2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_4bdhk")
position = Vector2(-3.09944e-06, -8)
texture = ExtResource("3_yxdfv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vqfsp")

[node name="Status" type="Node2D" parent="."]

[node name="LifeSprite" type="Sprite2D" parent="Status"]
position = Vector2(11, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_yxdfv")

[node name="LifePoints" type="Label" parent="Status"]
offset_left = 5.0
offset_top = 4.0
offset_right = 17.0
offset_bottom = 18.0
text = "99"
label_settings = ExtResource("5_tqbw1")
horizontal_alignment = 1

[node name="AtkSprite" type="Sprite2D" parent="Status"]
position = Vector2(-12, 10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_56jq0")

[node name="AtkPoints" type="Label" parent="Status"]
offset_left = -16.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 18.0
text = "99"
label_settings = ExtResource("5_tqbw1")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MoveSprite" type="Sprite2D" parent="Status"]
visible = false
position = Vector2(-12, -12)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_mluuh")

[node name="WalkPoints" type="Label" parent="Status"]
visible = false
offset_left = -17.0
offset_top = -18.0
offset_right = -5.0
offset_bottom = -4.0
text = "9"
label_settings = ExtResource("5_tqbw1")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mluuh")
}
